# RolesFastAPI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6379ef8a69a1_initial_migration.py
app/: main.py
app/api/: deps.py  utils.py
app/api/api_v1/: api.py
app/api/api_v1/routers/: accounts.py  auth.py  roles.py  user_roles.py  users.py
app/core/: config.py  security.py
app/crud/: base.py  crud_account.py  crud_role.py  crud_user.py  crud_user_role.py
app/db/: base_class.py  init_db.py
app/models/: account.py  role.py  user.py  user_role.py
app/schemas/: user.py  user_role.py
bash_commands/: startup.sh
tests/: conftest.py  test_main.py
tests/api/api_v1/: test_accounts.py  test_auth.py  test_users.py
tests/crud/: test_account.py  test_role.py  test_user.py  test_user_role.py
tests/utils/: overrides.py  test_db.py  user.py
tools/: thunder-collection_Library.json
